--- a/scripts/CMakeLists.txt
+++ b/scripts/CMakeLists.txt
@@ -12,4 +12,8 @@ add_executable(
 
 target_link_libraries(solid2fastq ${STANDARD_LIBRARIES} ${BZIP2_LIBRARIES} ${ZLIB_LIBRARIES})
 
-# bfast.resubmit.pl bfast.submit.pl ill2fastq.pl
+install(TARGETS solid2fastq RUNTIME DESTINATION bin)
+
+install(PROGRAMS bfast.resubmit.pl bfast.submit.pl ill2fastq.pl
+	RUNTIME DESTINATION bin
+)
